force-app/main/default/objects/RT_Price_Book__c/RT_Price_Book__c.object-meta.xml
<CustomObject>
    <label>REV Price Book</label>
    <nameField>
        <displayFormat>PPI-{0000000}</displayFormat>
        <label>Price Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REV Price Books</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>