force-app/main/default/objects/RT_Price_Book__c/fields/RE_AM_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_AM_Code__c</fullName>
    <formula>RE_Customer_Name__r.RE_Account_Manager__r.Value__c</formula>
    <label>AM Code</label>
    <type>Text</type>
</CustomField>