force-app/main/default/objects/RT_Price_Book__c/fields/RE_AutoCalRefAmnt__c.field-meta.xml
<CustomField>
    <fullName>RE_AutoCalRefAmnt__c</fullName>
    <description>used to store Aspired, RPG, etc values based on calculations.</description>
    <label>AutoCalRefAmnt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>