force-app/main/default/objects/RT_Price_Book__c/fields/RE_CBU_LDC_for_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_CBU_LDC_for_Final_Price__c</fullName>
    <label>CBU LDC for Final Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>