force-app/main/default/objects/RT_Price_Book__c/fields/RE_CBU_valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_CBU_valid_To__c</fullName>
    <label>CBU valid To</label>
    <type>Date</type>
</CustomField>