force-app/main/default/objects/RT_Price_Book__c/fields/RE_CND_Market_Move__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Market_Move__c</fullName>
    <label>Market Move</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>