force-app/main/default/objects/RT_Price_Book__c/fields/RE_CND_Old_Base_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Old_Base_Value__c</fullName>
    <label>Old Base Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>