force-app/main/default/objects/RT_Price_Book__c/fields/RE_CND_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Name__c</fullName>
    <formula>RT_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>