force-app/main/default/objects/RT_Price_Book__c/fields/RE_CND_ShipTo_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_ShipTo_Number__c</fullName>
    <label>ShipTo Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>