force-app/main/default/objects/RT_Price_Book__c/fields/RE_Direct_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Direct_Valid_To__c</fullName>
    <label>Direct Valid To</label>
    <type>Date</type>
</CustomField>