force-app/main/default/objects/RT_Price_Book__c/fields/RE_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>