force-app/main/default/objects/RT_Price_Book__c/fields/RE_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>RE_Distribution_Channel__c</fullName>
    <formula>RE_Contract_Master__r.RE_Distribution_Channel__r.Value__c</formula>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>