force-app/main/default/objects/RT_Price_Book__c/fields/RE_Division__c.field-meta.xml
<CustomField>
    <fullName>RE_Division__c</fullName>
    <formula>RE_Contract_Master__r.RE_Division__r.Value__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>