force-app/main/default/objects/RT_Price_Book__c/fields/RE_First_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_First_Price__c</fullName>
    <label>First Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>