force-app/main/default/objects/RT_Price_Book__c/fields/RE_Forecast_Margin_Above_LDC__c.field-meta.xml
<CustomField>
    <fullName>RE_Forecast_Margin_Above_LDC__c</fullName>
    <label>Forecast Margin Above LDC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>