force-app/main/default/objects/RT_Price_Book__c/fields/RE_Forecast_Margin_on_LDC__c.field-meta.xml
<CustomField>
    <fullName>RE_Forecast_Margin_on_LDC__c</fullName>
    <formula>IF(NOT(ISBLANK(RE_Margin_on_LDC__c)), RE_Margin_on_LDC__c - RE_Afternoon_Indication__c, null)</formula>
    <label>Forecast Margin Above LDC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>