force-app/main/default/objects/RT_Price_Book__c/fields/RE_M_1_UC3__c.field-meta.xml
<CustomField>
    <fullName>RE_M_1_UC3__c</fullName>
    <label>M-1 UC3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>