force-app/main/default/objects/RT_Price_Book__c/fields/RE_Margin_on_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Margin_on_MC__c</fullName>
    <formula>RE_Final_Price_Rebate__c   - IF(NOT(ISBLANK(RE_BDF__c)),RE_BDF__c,0) - IF(NOT(ISBLANK(RE_DFOA_Charges__c)),RE_DFOA_Charges__c,0) - IF(NOT(ISBLANK(RE_Rebate__c)),RE_Rebate__c,0) - RE_CBU_MC__c</formula>
    <label>Margin above MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>