force-app/main/default/objects/RT_Price_Book__c/fields/RE_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Material_Code__c</fullName>
    <formula>RT_Product__r.RE_Material__c</formula>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>