force-app/main/default/objects/RT_Price_Book__c/fields/RE_MIDday_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_MIDday_Price__c</fullName>
    <label>MIDday Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>