force-app/main/default/objects/RT_Price_Book__c/fields/RE_Net_Price_Exclude_Tax__c.field-meta.xml
<CustomField>
    <fullName>RE_Net_Price_Exclude_Tax__c</fullName>
    <label>Net Price Exclude Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>