force-app/main/default/objects/RT_Price_Book__c/fields/RE_Pricing_Level__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Level__c</fullName>
    <label>Pricing Level</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>