force-app/main/default/objects/RT_Price_Book__c/fields/RE_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RE_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>