force-app/main/default/objects/RT_Price_Book__c/fields/RE_Reference_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Reference_Price__c</fullName>
    <label>Reference Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>