force-app/main/default/objects/RT_Price_Book__c/fields/RE_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_Org__c</fullName>
    <formula>RE_Contract_Master__r.RE_Sales_Org__r.Value__c</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>