force-app/main/default/objects/RT_Price_Book__c/fields/RE_Service_SurChg__c.field-meta.xml
<CustomField>
    <fullName>RE_Service_SurChg__c</fullName>
    <label>Service SurChg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>