force-app/main/default/objects/RT_Price_Book__c/fields/RE_Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Ship_To_Number__c</fullName>
    <formula>RE_Contract_Master__r.RE_Customer_Name__r.AccountNumber</formula>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>