force-app/main/default/objects/RT_Price_Book__c/fields/RE_Sold_To_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Sold_To_Number__c</fullName>
    <formula>IF(ISPICKVAL( RE_Contract_Master__r.RE_Customer_Name__r.Customer_Type__c , &apos;Ship To&apos;) , RE_Contract_Master__r.RE_Customer_Name__r.RE_Parent_Customer__r.AccountNumber, RE_Contract_Master__r.RE_Customer_Name__r.AccountNumber)</formula>
    <label>Sold To</label>
    <type>Text</type>
</CustomField>