force-app/main/default/objects/RT_Price_Book__c/fields/RE_Start_date__c.field-meta.xml
<CustomField>
    <fullName>RE_Start_date__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>