force-app/main/default/objects/RT_Price_Book__c/fields/RE_Transport_Charge__c.field-meta.xml
<CustomField>
    <fullName>RE_Transport_Charge__c</fullName>
    <label>Transport Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>