force-app/main/default/objects/RT_Price_Book__c/fields/RE_Varkey_Direct__c.field-meta.xml
<CustomField>
    <fullName>RE_Varkey_Direct__c</fullName>
    <formula>RE_Customer_Name__r.RE_Sales__r.Value__c +  RE_Customer_Name__r.Sold_To_Number__c + &apos;00&apos; +  RE_Contract_Master__r.RE_Ship_To_Number__c  + &apos;000000000&apos; +   RT_Product__r.RE_Material__c</formula>
    <label>Varkey Direct</label>
    <type>Text</type>
</CustomField>