force-app/main/default/objects/RT_Price_Book__c/fields/RE_WTD_UC3__c.field-meta.xml
<CustomField>
    <fullName>RE_WTD_UC3__c</fullName>
    <label>WTD UC3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>