force-app/main/default/objects/RT_Price_Book__c/fields/RT_Amount__c.field-meta.xml
<CustomField>
    <fullName>RT_Amount__c</fullName>
    <description>to store amounts from Aureus data(Rev Contract Master)</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>