force-app/main/default/objects/RT_Price_Book__c/fields/RT_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Condition_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Type</label>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Price Books</relationshipLabel>
    <relationshipName>REV_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>