force-app/main/default/objects/RT_Price_Book__c/fields/RT_Country__c.field-meta.xml
<CustomField>
    <fullName>RT_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_Revolution_Country</valueSetName>
    </valueSet>
</CustomField>