force-app/main/default/objects/RT_Price_Book__c/fields/RT_Depot_Price__c.field-meta.xml
<CustomField>
    <fullName>RT_Depot_Price__c</fullName>
    <label>Depot Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>