force-app/main/default/objects/RT_Price_Book__c/fields/RT_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RT_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>