force-app/main/default/objects/RT_Price_Book__c/fields/RT_EMRAFEE__c.field-meta.xml
<CustomField>
    <fullName>RT_EMRAFEE__c</fullName>
    <label>EMRAFEE</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>