force-app/main/default/objects/RT_Price_Book__c/fields/RT_Income_Share__c.field-meta.xml
<CustomField>
    <fullName>RT_Income_Share__c</fullName>
    <label>Income Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>