force-app/main/default/objects/RT_Price_Book__c/fields/RT_Rev_Contract__c.field-meta.xml
<CustomField>
    <fullName>RT_Rev_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Contract</label>
    <referenceTo>REV_Contract_Master__c</referenceTo>
    <relationshipName>Product_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>