force-app/main/default/objects/RT_Price_Book__c/fields/RT_Sale_Price_Including_KDV__c.field-meta.xml
<CustomField>
    <fullName>RT_Sale_Price_Including_KDV__c</fullName>
    <formula>RT_Sales_Price_Excluding_KDV__c +  RT_KDV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Price Including KDV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>