force-app/main/default/objects/RT_Price_Book__c/fields/RT_Sales_Price_Excluding_KDV__c.field-meta.xml
<CustomField>
    <fullName>RT_Sales_Price_Excluding_KDV__c</fullName>
    <formula>RT_Refinery_Sale_Price__c +  RT_Special_Consumption_Tax__c + RT_Income_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price Excluding KDV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>