force-app/main/default/objects/RT_Price_Book__c/fields/RT_SCT__c.field-meta.xml
<CustomField>
    <fullName>RT_SCT__c</fullName>
    <label>SCT</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>