force-app/main/default/objects/RT_Price_Book__c/fields/RT_Sold_to_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Sold_to_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>