force-app/main/default/objects/RT_Price_Book__c/fields/RT_Sold_to_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Sold_to_Number__c</fullName>
    <formula>RT_Sold_to_Name__r.AccountNumber</formula>
    <label>Sold to Number</label>
    <type>Text</type>
</CustomField>