force-app/main/default/objects/RT_Price_Book__c/fields/RT_Special_Consumption_Tax__c.field-meta.xml
<CustomField>
    <fullName>RT_Special_Consumption_Tax__c</fullName>
    <label>Special Consumption Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>