force-app/main/default/objects/RT_Price_Book__c/recordTypes/Refinery_Prices.recordType-meta.xml
<RecordType>
    <fullName>Refinery_Prices</fullName>
    <active>true</active>
    <description>Refinery Prices are calculated here</description>
    <label>Refinery Price (Tupras Price Data)</label>
</RecordType>