force-app/main/default/objects/RT_Price_Book__c/recordTypes/RT_Rev_Contract_Prices.recordType-meta.xml
<RecordType>
    <fullName>RT_Rev_Contract_Prices</fullName>
    <active>true</active>
    <description>This record type is used to store price changes on REV_Contract_Master.</description>
    <label>Rev Contract Prices</label>
</RecordType>