force-app/main/default/objects/RT_Price_Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RE_CND_Product_Name__c</columns>
    <columns>RT_Location__c</columns>
    <columns>RE_Is_CBU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_Is_Latest__c</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RE_AutoCalRefAmnt__c</columns>
    <columns>RE_Custom_Opp_Approve__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_AM_Code__c</columns>
    <columns>RE_Contract_Master__c</columns>
    <columns>RE_Final_Price_Rebate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>