force-app/main/default/objects/RT_Price_Book__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>OBJECT_ID</columns>
    <columns>RT_Product__c</columns>
    <columns>RE_ApprovalProcess__c</columns>
    <columns>RE_RefUC3_Price__c</columns>
    <columns>RE_W_1_UC3__c</columns>
    <columns>RE_Backstop_Margin__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>RE_Reference_Period__c</columns>
    <columns>RE_Contract_Master__c</columns>
    <columns>NAME</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Custom_Opp_Approve__c</columns>
    <columns>RE_AM_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RT_Country__c</field>
        <operation>equals</operation>
        <value>MY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All (SOM)</label>
</ListView>