force-app/main/default/objects/RT_Price_Book__c/listViews/Copy_of_RE_customer_Opps.listView-meta.xml
<ListView>
    <fullName>Copy_of_RE_customer_Opps</fullName>
    <columns>NAME</columns>
    <columns>RE_Contract_Master__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_CND_Product_Name__c</columns>
    <columns>RE_RefUC3_Price__c</columns>
    <columns>RE_Reference_Period__c</columns>
    <columns>RE_ApprovalProcess__c</columns>
    <columns>RE_Backstop_Margin__c</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RE_Ship_To_Number__c</columns>
    <columns>RE_Sold_To_Number__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Final_Price_Rebate__c</columns>
    <columns>RE_Custom_Opp_Approve__c</columns>
    <columns>RE_Is_Latest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a3i8e000000TZTG</value>
    </filters>
    <label>Copy of RE customer Opps</label>
</ListView>