force-app/main/default/objects/RT_Price_Book__c/listViews/MY_Price_Book_CBU.listView-meta.xml
<ListView>
    <fullName>MY_Price_Book_CBU</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RE_Contract_Master__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RT_Product__c</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RE_Is_CBU__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Custom_Opp_Approve__c</columns>
    <columns>RE_Final_Price_Rebate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_AM_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RT_Country__c</field>
        <operation>equals</operation>
        <value>MY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>MY Price Book CBU</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>