force-app/main/default/objects/RT_Price_Book__c/listViews/MY_Price_Book_MidDay.listView-meta.xml
<ListView>
    <fullName>MY_Price_Book_MidDay</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RE_Contract_Master__c</columns>
    <columns>RT_Location__c</columns>
    <columns>RE_CND_Product_Name__c</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RE_Sold_To_Number__c</columns>
    <columns>RE_Ship_To_Number__c</columns>
    <columns>RE_Final_Price_Rebate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Is_Latest__c</columns>
    <columns>RE_Custom_Opp_Approve__c</columns>
    <columns>RT_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Valid_From__c</field>
        <operation>equals</operation>
        <value>12/9/2022</value>
    </filters>
    <filters>
        <field>RE_Valid_To__c</field>
        <operation>equals</operation>
        <value>12/11/2022</value>
    </filters>
    <label>MY Price Book MidDay</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>